# 32_software

./: CMakeLists.txt  LICENSE  README.md  Xresources  battery.py  conky.conf  eyemimic.cpp
kernel_module/: Makefile  ledpanel-driver.c
